Add summaries for period of 2025-02-01 to 2025-02-02; add week summary; fetch latest personal issues

--- a/personal-issues/1839.md
+++ b/personal-issues/1839.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2025-02-01
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,13 +8,35 @@ projects:
 milestone:	
 number:	1839
 --
+## Personal projects
+
+### Donations list website
+
+- [x] ~8 minutes: Reply to an email
+
+### Contract work for Vipul Naik
+
+- [x] ~2 minutes: Partially mark a worker as inactive https://github.com/vipulnaik/contractwork/commit/55e251e9299397f96f60d17004634dba8565fc50
+
 ## Personal finances, income and taxes
 
+### Financial tracking and recording
+
+- [x] ~8 minutes: Add recent credit reports and scores https://github.com/vipulnaik/personal-finances/commit/48210652fa14ae107aa9ba8f7ac30f460883c9ad
 ### US taxes
 
-- [x] ~5 minutes: Download various income forms (W-2, 1099)
+- [x] ~10 minutes: Download various income forms (W-2, 1099), check for updated documents, and update tax filing summary
 
 ## Personal chores
+
+### Cooking and food purchases
+
+- [x] ~1 hour: Get groceries from Trader Joe's (return journey partly via BART instead of walking all the way) https://github.com/vipulnaik/diet-exercise-health/commit/16a6ac8904ae79683ed8e78899c4d2cd70c3d4a6
+- [x] ~25 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/09e405c52e0f76f0de67f06324b5d45d1f1baaa0 (meal index fixed in https://github.com/vipulnaik/diet-exercise-health/commit/1287a9264434870a28204cc4ddf8df7a1baa787e)
+
+### Updates tracking and planning
+
+- [x] ~12 minutes: Add weekday summaries and month summary https://github.com/vipulnaik/daily-updates/commit/ab55b547e749f7f03ccbcec59886562a891f956c
 
 ### Administrative
 
@@ -22,5 +44,31 @@ number:	1839
 
 ### Periodic cleaning tasks
 
-- [ ] ~5 minutes so far: Vinegar cleanse of stainless steel pot (done every few months)
+- [x] ~30 minutes: Vinegar cleanse of stainless steel pot (done every few months)
 
+### Month change checklist management
+
+- [x] ~2 minutes: Do cleanup (cancel or postpone) of month change checklist items
+
+### Documentation and checklists
+
+- [x] ~15 minutes: Document my trip today (for learnings on navigating the rain)
+
+### Periodic recall tasks
+
+- [x] ~25 minutes: Do monthly account recovery fire drill
+## Other activities
+
+### Miscellaneous
+
+- [x] ~35 minutes: Work on a recommendation letter
+
+### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
+
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~10 minutes: Continue watching new content from the cardiovascular pharmacology playlist
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [x] ~20 minutes: Finish watching / listening to a video
