Add summaries for period of 2025-02-03 to 2025-02-07; fetch latest personal issues

--- a/personal-issues/1841.md
+++ b/personal-issues/1841.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2025-02-03
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -21,6 +21,11 @@ number:	1841
 ### Health research, appointments, recording
 
 - [x] ~5 minutes: Increase thresholds for two exercises https://github.com/vipulnaik/diet-exercise-health/commit/e2b2a2eb2e3442f81cbf1068b309ed368876215a https://github.com/vipulnaik/diet-exercise-health/commit/f3a9795a44c80a702af360d8689f00662d1a217f
+
+### Update tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/fc759ce39c69b35941a9a041c2c8791a9e196305
+
 ## Other activities
 
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
@@ -32,4 +37,4 @@ number:	1841
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
 - [x] ~25 minutes: Continue watching / listening to a video (all on speaker)
-- [x] ~1 hour 20 minutes: Start watching / listening to a video (1 hour 15 minutes on speaker and 5 minutes on headphones)
+- [x] ~1 hour 30 minutes: Start watching / listening to a video (1 hour 15 minutes on speaker, 5 minutes on headphones, and 10 minutes on phone before sleeping)
