--- a/personal-issues/1846.md
+++ b/personal-issues/1846.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2025-02-08
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,12 +8,21 @@ projects:
 milestone:	
 number:	1846
 --
+## Personal finances, income and taxes
+
+### Financial transactions
+
+- [x] ~3 minutes: Execute and document a financial transaction https://github.com/vipulnaik/personal-finances/commit/1d4fd12d05b3ed29317a7f94283a6a10370e9093
+
 ## Personal chores
 
 ### Cooking and food purchases
 
 - [x] ~12 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/52a0452d1f008fe03e34794646b30254f2193cae cleanup portion only (prep portion multiplexed with listening to a video)
 
+### Updates tracking and planning
+
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/23197f8202da765377a6705b64cf30444bcb43d0
 ### Administrative
 
 - [x] ~3 minutes: Reset an expired password and do some related checking and documentation
