Add summaries for period of 2025-02-10 to 2025-02-14; fetch latest personal issues

--- a/personal-issues/1849.md
+++ b/personal-issues/1849.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2025-02-11
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -19,7 +19,11 @@ number:	1849
 ### Cooking and food purchases
 
 - [x] ~50 minutes: Potatoes prep https://github.com/vipulnaik/diet-exercise-health/commit/c24177e33a301225f63dc30f8b7b45507876c8fb (excluding 1 hour of prep time that was multiplexed with watching / listening to videos, and excluding cleanup time that was multiplexed entirely with watching / listening to videos)
-- [x] ~25 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/caa6d3fb5ac1958741626e653756f5f4c9f4a24d
+- [x] ~13 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/caa6d3fb5ac1958741626e653756f5f4c9f4a24d (cleanup deferred to tomorrow)
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/7be125b7565e7d77abefe6eee13ebfde8d531e7b
 
 ## Other activities
 
@@ -27,8 +31,8 @@ number:	1849
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [ ] ~15 minutes so far: Continue watching new content from the cardiovascular pharmacology playlist (all multiplexed with potatoes prep)
+- [x] ~25 minutes: Continue watching new content from the cardiovascular pharmacology playlist (all multiplexed with potatoes prep)
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
-- [ ] ~2 hours 10 minutes so far: Start watching / listening to a video (including 45 minutes multiplexed with potatoes prep and some time multiplexed with potatoes prep cleanup)
+- [x] ~2 hours 10 minutes: Start watching / listening to a video (including 45 minutes multiplexed with potatoes prep and some time multiplexed with potatoes prep cleanup)
