--- a/personal-issues/1853.md
+++ b/personal-issues/1853.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2025-02-15
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -12,19 +12,36 @@ number:	1853
 
 ### Financial transactions
 
-- [x] ~15 minutes: Execute a financial transaction https://github.com/vipulnaik/personal-finances/commit/957fbb4dd9f9a5ea796c1b57662e3832703b5330
+- [x] ~17 minutes: Execute a financial transaction https://github.com/vipulnaik/personal-finances/commit/957fbb4dd9f9a5ea796c1b57662e3832703b5330 and later do a verification https://github.com/vipulnaik/personal-finances/commit/6ff4786243438e89aaf6b46a614b14a0fa4a3e77
 - [x] ~2 minutes: Take care of a few money transfers
 
 ## Personal chores
+
+### Cooking and food purchases
+
+- [x] ~1 hour 5 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/6129d688e8843c11a405288308ca1cb06742141f
+- [x] ~1 hour 30 minutes: Potatoes prep https://github.com/vipulnaik/diet-exercise-health/commit/9165e4b2e8f608d104fa039a906f2a31cade7c2a excluding 15 minutes multiplexed with watching Ninja Nerd videos
 
 ### Administrative / travel / bureaucracy
 
 - [x] ~2 minutes: Double-check my document pouch
 
+### Updates tracking and planning
+
+- [x] ~10 minutes: Add weekday summaries https://github.com/vipulnaik/daily-updates/commit/5e08e04c61014ec87579107518a87c0f7aeda1db
+
 ## Other activities
+
+### Miscellaneous
+
+- [x] ~50 minutes: Review and tweak a recommendation letter draft; work on the associated submission process
 
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
 
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~25 minutes: Continue watching new content from the cardiovascular pharmacology playlist, including 15 minutes multiplexed with potatoes prep
+
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
-- [ ] ~10 minutes so far: Continue watching / listening to a video
+- [x] ~35 minutes: Continue watching / listening to a video
