--- a/personal-issues/1855.md
+++ b/personal-issues/1855.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2025-02-17
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -18,6 +18,7 @@ number:	1855
 ### Personal devops
 
 - [x] ~5 minutes: Take care of a couple of OS updates
+- [x] ~10 minutes: Back up my Slack self-chat logs
 
 ### Health research, appointments, recording
 
@@ -26,6 +27,14 @@ number:	1855
 ### Administrative / travel / bureaucracy
 
 - [x] ~10 minutes: Investigate and document streaming service status in India
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/ea9d657b137d52fa83900b6b612e39cf87a37a66
+
+### Laundry
+
+- [x] ~35 minutes: Regular laundry
 
 ## Other activities
 
@@ -37,9 +46,13 @@ number:	1855
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [ ] ~10 minutes so far: Continue watching new content from the cardiovascular pharmacology playlist
+- [x] ~15 minutes: Continue watching new content from the cardiovascular pharmacology playlist
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
 - [x] ~40 minutes: Finish watching / listening to a video
-- [ ] ~10 minutes so far: Start watching / listening to a video
+- [x] ~10 minutes: Start watching / listening to a video
+
+#### Deep dives into specific areas
+
+- [x] ~15 minutes: Watch a video on whiplash and do some followup reading
