Add summaries for period of 2025-02-24 to 2025-02-28; add February 2025 month summary; fetch latest personal issues

--- a/personal-issues/1864.md
+++ b/personal-issues/1864.md
@@ -46,9 +46,11 @@ number:	1864
 ### Personal practices
 
 - [x] ~10 minutes: Take notes on incidents today and learnings from them
+
 ## House chores
 
 - [x] ~10 minutes: Sort through accumulated mail (most of it junk mail for generic "current resident" or specific people some of whom were former residents)
+- [x] ~3 minutes: Look into a house matter
 
 ## Other activities
 
