--- a/personal-issues/1865.md
+++ b/personal-issues/1865.md
@@ -1,5 +1,5 @@
 title:	Vipul Thursday checklist | 2025-02-27
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -12,13 +12,22 @@ number:	1865
 
 ### Financial anomaly investigations
 
-- [x] ~25 minutes: Continue investigating an issue and take followup steps https://github.com/vipulnaik/personal-finances/commit/6264b1a1738a4d6f3d5b22a469f42fa590658d9a
+- [x] ~1 hour 40 minutes: Continue investigating an issue and take followup steps https://github.com/vipulnaik/personal-finances/commit/6264b1a1738a4d6f3d5b22a469f42fa590658d9a https://github.com/vipulnaik/personal-finances/commit/eac7ce8e99e8ca415d9f7ff55d1be7e7d57b8f4e https://github.com/vipulnaik/personal-finances/commit/367b64e9dd37f6fd414cc4f96abcdab58e173349 https://github.com/vipulnaik/personal-finances/commit/26cdb0367f14b2a9934ef547fffd11c5e852ee4b https://github.com/vipulnaik/personal-finances/commit/c962e72da657630a7fe6e691020c117cfc88ffff https://github.com/vipulnaik/personal-finances/commit/015a28649dc08241e3ed601bf3d271bf5c340c21 https://github.com/vipulnaik/personal-finances/commit/3bdb65afc3badafd9964fa2d749965ac6f115356 https://github.com/vipulnaik/personal-finances/commit/7fb18f186705bad0b59480a869d458fa0e07a969
 
 ## Personal chores
 
 ### Health research, appointments, recording
 
 - [x] ~5 minutes: Record weight-lifting updates https://github.com/vipulnaik/diet-exercise-health/commit/e9b1b9708ac784e7c17806508d453f44fc174bd8
+- [x] ~3 minutes: Take a breath test reading https://github.com/vipulnaik/diet-exercise-health/commit/ac8aa6a4b6200f61ad8635243f1ed7528de75492
+
+### Updates tracking and planning
+
+- [x] ~16 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/e3791ee88234cb325775d685b4eec922f84159f3
+
+## House chores
+
+- [x] ~3 minutes: Record a house matter from yesterday
 
 ## Other activities
 
@@ -26,8 +35,11 @@ number:	1865
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [ ] ~5 minutes so far: Continue watching new content from the cardiovascular pharmacology playlist
+- [x] ~5 minutes: Continue watching new content from the cardiovascular pharmacology playlist
+- [x] ~10 minutes: Continue watching new content from the renal medicine playlist
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
-- [ ] ~35 minutes so far: Start watching / listening to a video
+- [x] ~35 minutes: Start watching / listening to a video
+- [x] ~25 minutes: Finish watching / listening to a video
+- [x] ~5 minutes: Watch / listen to a video
