Add summaries for week of 2025-03-10 to 2025-03-16; fetch latest personal issues

--- a/personal-issues/1870.md
+++ b/personal-issues/1870.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2025-03-04
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -12,11 +12,20 @@ number:	1870
 
 ### Laundry
 
-- [x] ~35 minutes: Regular laundry
+- [x] ~37 minutes: Regular laundry including extra cleaning trip
+- [x] ~35 minutes: Heavy laundry
 
 ### Clothing
 
 - [x] ~2 minutes: Record two new pieces of clothing having their pre-wear wash completed
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/750938eb752ddd9eb2ac164d714957e586123c29
+
+## House chores
+
+- [x] ~5 minutes: Take care of a building issue
 
 ## Other activities
 
@@ -29,4 +38,4 @@ number:	1870
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
-- [x] ~20 minutes: Start listening to a video
+- [x] ~30 minutes: Start listening to a video
