--- a/personal-issues/1876.md
+++ b/personal-issues/1876.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2025-03-10
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -22,7 +22,15 @@ number:	1876
 
 ### Cooking and food purchases
 
-- [x] ~1 hour 45 minutes: Eggplant meal prep https://github.com/vipulnaik/diet-exercise-health/commit/f511c8e493dd13ea6ad6002e009ee0c0fb148edd
+- [x] ~1 hour 35 minutes: Eggplant meal prep https://github.com/vipulnaik/diet-exercise-health/commit/f511c8e493dd13ea6ad6002e009ee0c0fb148edd excluding cleanup time that was multiplexed with listening to a video
+
+### Updates tracking and planning
+
+- [x] ~16 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/8f79c2d4913de86d780163954eb699cef98b6d9a
+
+### Periodic cleaning tasks
+
+- [x] (no separate time tracked as I multiplexed this with listening to videos) Sweep bedroom
 
 ## Other activities
 
@@ -30,4 +38,9 @@ number:	1876
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [ ] ~5 minutes so far: Continue watching new content from the renal medicine playlist
+- [x] ~15 minutes: Continue watching new content from the renal medicine playlist
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [x] ~30 minutes: Finish listening to a video
+- [x] ~40 minutes: Start listening to a video 
