Add summaries for period of 2025-03-28 to 2025-03-30; add week summary; fetch latest personal issues

--- a/personal-issues/1893.md
+++ b/personal-issues/1893.md
@@ -19,7 +19,7 @@ number:	1893
 
 - [x] ~8 minutes: Update standing plan in light of recent events https://github.com/vipulnaik/daily-updates/commit/1f12acc4db72f457234a3fd121530932ce6f8577
 
-## Career and family planning
+## Family and career planning
 
 - [x] ~15 minutes: Dictate an initial draft of a document; later, do a pass-through for cleanup
 
