--- a/personal-issues/1897.md
+++ b/personal-issues/1897.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2025-03-31
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,7 +8,21 @@ projects:
 milestone:	
 number:	1897
 --
+## Personal projects
+
+### Contract work for Vipul Naik
+
+- [x] ~8 minutes: Add February 2025 payments due to @riceissa
+
+### Subwiki stuff
+
+- [x] ~5 minutes: Reply to an email
+
 ## Personal finances, income and taxes
+
+### Financial tracking and recording
+
+- [x] ~1 minute: Update contractwork balance after adding February 2025 payments due to @riceissa https://github.com/vipulnaik/personal-finances/commit/4d72d038bbfacc2b9122f693f4023dbf42d4ecac
 
 ### US taxes
 
@@ -20,14 +34,34 @@ number:	1897
 
 - [x] ~12 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/fb3603eafa77c9d69a7435e94545162283bf2373 cleanup portion only as prep was multiplexed with listening to a video
 
+### Health research, appointments, recording
+
+- [x] ~5 minutes: Edit a dictated doc
+
+### Updates tracking and planning
+
+- [x] ~8 minutes: Add summaries for remainder of last week (and week summary) https://github.com/vipulnaik/daily-updates/commit/82b2bc538d7aed26a81b7d71cd5a8d194a9bf9df
+
 ### Personal devops
 
 - [x] ~3 minutes: Document an issue with headphones
+
+### Administrative / travel / bureaucracy
+
+- [x] ~1 hour 45  minutes: Do some travel planning
 
 ## Other activities
 
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
 
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~15 minutes: Continue listening to new content from the renal medicine playlist
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [x] ~20 minutes: Start listening to a video
+
 #### Deep dives into specific areas: organic acid testing
 
-- [ ] ~50 minutes so far: Start listening to a video
+- [x] ~50 minutes: Start listening to a video
