Add summaries for 2025-04-13; add week summary; fetch latest personal issues

--- a/personal-issues/1910.md
+++ b/personal-issues/1910.md
@@ -1,5 +1,5 @@
 title:	Vipul Sunday checklist | 2025-04-13
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -14,11 +14,17 @@ number:	1910
 
 - [x] ~2 minutes: Switch month for Wikipedia Views
 
+## Personal finances, income and taxes
+
+### Financial tracking and recording
+
+- [x] ~8 minutes: Add a bunch of latest statements https://github.com/vipulnaik/personal-finances/commit/720ffc5260968b6c2305f7a0d5adc62fa922f403
+
 ## Personal chores
 
 ### Laundry
 
-- [x] ~35 minutes: Regular laundry
+- [x] ~20 minutes: Regular laundry (excluding 15 minutes of laundry clothes sorting multplexed with listening to a video)
 
 ### Clothing
 
@@ -27,13 +33,18 @@ number:	1910
 ### Updates tracking and planning
 
 - [x] ~18 minutes: Add summaries for past week + month summary https://github.com/vipulnaik/daily-updates/commit/438b7302c1efee323d53dedf80f528eb85bc14b1
+- [x] ~12 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/bd03bca07b10934b4a3d4f7a265b27136005697b
 
 ### Administrative / travel / bureaucracy
 
-- [ ] ~2 minutes so far: Look into a potential change
+- [x] ~5 minutes: Look into a potential change
+- [x] ~30 minutes: Take care of various travel-related items
 
 ## Other activities
 
+### Periodic conversations
+
+- [x] ~5 minutes: Weekly chat with father
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
@@ -43,4 +54,4 @@ number:	1910
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
 - [x] ~40 minutes: Finish listening to a video
-- [ ] ~5 minutes so far: Start listening to a video
+- [x] ~1 hour 5 minutes: Start listening to a video
