Add summaries for week of 2025-04-21 to 2025-04-27; fetch latest personal issues

--- a/personal-issues/1922.md
+++ b/personal-issues/1922.md
@@ -12,8 +12,7 @@ number:	1922
 
 ### Cooking and food purchases
 
-- [x] (no separate tiem tracked as both prep and cleanup were multiplexed with listening to videos) Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/6fb9ba868edad3bbf4a43cae4d926e6dc9145c2e cleanup portion only as prep was multiplexed with listening to a video
-
+- [x] (no separate time tracked as both prep and cleanup were multiplexed with listening to videos) Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/6fb9ba868edad3bbf4a43cae4d926e6dc9145c2e
 ### Administrative / travel / bureaucracy
 
 - [x] ~30 minutes: Continue with travel planning and coordination
