--- a/personal-issues/1923.md
+++ b/personal-issues/1923.md
@@ -16,7 +16,7 @@ number:	1923
 
 ## Personal chores
 
-### Health research, appointments, recording
+### Cooking and food purchases
 
 - [x] ~1 hour 5 minutes: Potatoes prep https://github.com/vipulnaik/diet-exercise-health/commit/0647cebe8db6da645469b8313819114737fbb61e excluding 20 minutes multiplexed with watching Ninja Nerd videos and also excluding cleanup time that was multiplexed with listening to videos
 
