--- a/personal-issues/1935.md
+++ b/personal-issues/1935.md
@@ -1,5 +1,5 @@
 title:	Vipul Thursday checklist | 2025-05-08
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -13,12 +13,17 @@ number:	1935
 ### Financial tracking and recording
 
 - [x] ~7 minutes: Wrap up balances data entry for March 2025 https://github.com/vipulnaik/personal-finances/commit/18407ed6a7eb40bf5b1cfd1ab44bfa74fe661b88 (work started two days prior)
+- [x] ~2 minutes: Add two April statements https://github.com/vipulnaik/personal-finances/commit/a3bf9fbe31a630453386d4f5b961de5fcbd4508f
 
 ## Personal chores
 
 ### Laundry
 
-- [x] ~3 minutes: Mini-laundry
+- [x] ~5 minutes: Mini-laundry
+
+### Updates tracking and planning
+
+- [x] ~8 minutes: Add summaries for remainder of a week https://github.com/vipulnaik/daily-updates/commit/66309ce3229de27dada43a7c499a70cdc864e176
 
 ### Health research, appointments, recording
 
