Add summaries for week of 2025-04-28 to 2025-05-04; add April 2025 month summary; fetch latest personal issues; update timezone information in preamble

--- a/personal-issues/1936.md
+++ b/personal-issues/1936.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2025-05-09
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -13,3 +13,7 @@ number:	1936
 ### Administrative / travel / bureaucracy
 
 - [x] ~5 hours: Take care of a bureaucratic matter and do followup recording
+
+### Updates tracking and planning
+
+- [x] ~16 minutes: Add summaries for a recently completed week https://github.com/vipulnaik/daily-updates/commit/85dae8a0123318814a766e903bcb510bdec637a9
