Add summaries for Sunday 2025-05-11; add week summary; fetch latest personal issues

--- a/personal-issues/1938.md
+++ b/personal-issues/1938.md
@@ -1,5 +1,5 @@
 title:	Vipul Sunday checklist | 2025-05-11
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -13,3 +13,24 @@ number:	1938
 ### Devops stuff
 
 - [x] ~2 minutes: Merge and release vipulnaik/donations#148
+
+## Personal finances, income and taxes
+
+### Financial tracking and recording
+
+- [x] ~20 minutes: Add balances for end of April 2025 https://github.com/vipulnaik/personal-finances/commit/8b7db68fe6c16acf3ad11add64331bc5908d0725
+
+### India taxes
+
+- [x] ~2 hours 30 minutes: Do a first pass of work on India taxes
+
+## Personal chores
+
+### Updates tracking and planning
+
+- [x] ~18 minutes: Add summaries for previous week; add April 2025 month summary https://github.com/vipulnaik/daily-updates/commit/5e4d125a4e14cccad94fb5e02b64a3872fb04ae8
+- [x] ~12 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/7b5ee3fd8faed1bbfee11ed3872f9e67122e7fa9
+
+### Administrative / travel / bureaucracy
+
+- [x] ~30 minutes: Continue with bureaucratic prep
