Add summaries for week of 2025-05-19 to 2025-05-25; fetch latest personal issues

--- a/personal-issues/1946.md
+++ b/personal-issues/1946.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2025-05-19
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -20,13 +20,33 @@ number:	1946
 
 ## Personal chores
 
+### Cooking and food purchases 
+
+- [x] ~10 minutes: Rice prep
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/b78101f52deee87e94e91501d328545ad210499a
+
 ### Health research, appointments, recording
 
 - [x] ~30 minutes: Make various improvements to checklists and logs and link to / cover in health profile https://github.com/vipulnaik/diet-exercise-health/commit/fccfdf87b13f2ae21c8744b7a362100f7a455117 https://github.com/vipulnaik/diet-exercise-health/commit/50528f3f3be16c420fb456bf29230625a334b40c https://github.com/vipulnaik/diet-exercise-health/commit/925847910363f9ef0f2ff04d3acb086499c4b54e
 
+### Personal practices
+
+- [x] ~5 minutes: Add guidance on checklist execution based on recent experience
+
 ### Administrative / travel / bureaucracy
 
 - [x] ~3 minutes: Do some travel-related research and checklist improvement
+- [x] ~2 minutes: Do a periodic check
+
+### Periodic tasks
+
+- [x] ~20 minutes: Do periodic practice of rarely used skills + language practice
+- [x] ~8 minutes: Execute on logged-in verification checklist
+- [x] ~1 hour 40 minutes: Remove a couple of items from account list and set up password list for recall for this time; later, execute on the password recall
+- [x] ~27 minutes: Do login list portion and a few other pieces of account recovery fire drill (physical verifications are still pending)
 
 ## House chores
 
@@ -38,4 +58,4 @@ number:	1946
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
-- [ ] ~10 minutes so far: Start listening to a video
+- [x] ~10 minutes: Start listening to a video
