Add summaries for period of 2025-05-26 to 2025-05-31; add May 2025 month summary; fetch latest personal issues

--- a/personal-issues/1953.md
+++ b/personal-issues/1953.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2025-05-26
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,13 +8,28 @@ projects:
 milestone:	
 number:	1953
 --
+## Personal projects
+
+### Diffgeom subwiki
+
+- [x] ~3 minutes: Make tweaks to diffgeom subwiki while discussing differential geometry
+
 ## Personal finances, income and taxes
 
 ### US taxes
 
 - [x] ~1 hour 40 minutes: Put together detailed US tax guidance; make updates to other docs in the process
+- [x] ~40 minutes: Do partial review of my filled tax return draft
+
+### India taxes
+
+- [x] ~2 hours: Continue finetuning process for India taxes
 
 ## Personal chores
+
+### Cooking and food purchases
+
+- [x] ~7 minutes: Rice prep
 
 ### Laundry
 
@@ -24,7 +39,15 @@ number:	1953
 
 - [x] ~10 minutes: Hand gripper exercise updates https://github.com/vipulnaik/diet-exercise-health/commit/e8db407598d9104ed1fc6293760797a5fdfe87b6 + minor tweaks to exercise routine doc https://github.com/vipulnaik/diet-exercise-health/commit/d87f373ce69e877bd4f26075340b1fd1a18bbcb6
 
+### Updates tracking and planning
+
+- [x] ~16 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/34ca95beb51d390ca53b33d18fa59cbdeb26a31c
+
 ## Other activities
+
+### Differential geometry
+
+- [x] ~20 minutes: Discuss some differential geometry
 
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
 
