Add summaries for period of 2025-06-01 to 2025-06-02; add summary for week ending 2025-06-01; fetch latest personal issues

--- a/personal-issues/1959.md
+++ b/personal-issues/1959.md
@@ -1,5 +1,5 @@
 title:	VIpul Sunday checklist | 2025-06-01
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -9,6 +9,10 @@ milestone:
 number:	1959
 --
 ## Personal projects
+
+### Timelines wiki (contract work)
+
+- [x] ~15 minutes: Read through timeline of robotics
 
 ### Wikipedia Views
 
@@ -26,9 +30,14 @@ number:	1959
 
 - [x] ~10 minutes: Rice prep
 
+### Updates tracking and planning
+
+- [x] ~14 minutes: Add summaries for week so far + month summary https://github.com/vipulnaik/daily-updates/commit/8f023b116e4d3c6b972207eb4250c7accc923d9c
+
 ### Administrative / travel / bureaucracy
 
 - [x] ~12 minutes: Continue work on travel checklist execution and improvement
+- [x] ~1 hour 30 minutes: Continue working through administrative stuff
 
 ### Administrative (periodic tasks)
 
@@ -36,8 +45,13 @@ number:	1959
 
 ## House chores
 
-- [x]  ~2 minutes: Take care of Internet issue
+- [x]  ~45 minutes: Take care of Internet issue, leading ultimately to new router installation
+
 ## Other activities
+
+### Learning about AI progress
+
+- [x] ~1 hour 30 minutes: Catch up on recent AI progress news as I continue to think through strategy for updating the timeline of AI safety; also, in the process, test ChatGPT and Claude with somewhat difficult group theory questions
 
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
 
