Add summaries for period of 2025-06-03 to 2025-06-04; fetch latest personal issues

--- a/personal-issues/1959.md
+++ b/personal-issues/1959.md
@@ -1,4 +1,4 @@
-title:	VIpul Sunday checklist | 2025-06-01
+title:	Vipul Sunday checklist | 2025-06-01
 state:	CLOSED
 author:	vipulnaik
 labels:	
@@ -45,7 +45,7 @@ number:	1959
 
 ## House chores
 
-- [x]  ~45 minutes: Take care of Internet issue, leading ultimately to new router installation
+- [x] ~45 minutes: Take care of Internet issue, leading ultimately to new router installation
 
 ## Other activities
 
