--- a/personal-issues/1961.md
+++ b/personal-issues/1961.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2025-06-03
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -36,16 +36,17 @@ number:	1961
 
 - [x] ~2 minutes: Make a small indentation fix to tax steps doc
 
-### Administrative / travel / bureaucracy
-
-- [x] ~25 minutes: Wrap up a bureaucratic task lingering over from the past few days
-- [x] ~1 hour: Wrap up a bunch of administrative coordination tasks
-
 ## Personal chores
 
 ### Administrative
 
 - [x] ~2 minutes: Make a payment
+
+### Administrative / travel / bureaucracy
+
+- [x] ~25 minutes: Wrap up a bureaucratic task lingering over from the past few days
+- [x] ~1 hour: Wrap up a bunch of administrative coordination tasks
+- [x] ~20 minutes: Work on some travel planning stuff
 
 ## Other activities
 
