--- a/personal-issues/1970.md
+++ b/personal-issues/1970.md
@@ -1,5 +1,5 @@
 title:	Vipul Thursday checklist | 2025-06-12
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,6 +10,38 @@ number:	1970
 --
 ## Personal chores
 
+### Laundry
+
+- [x] ~15 minutes: Regular laundry (smaller load than usual) excluding clothes sorting time multiplexed with listening to a video)
+
+### Updates tracking and planning
+
+- [x] ~4 minutes: Add summaries for two final days in India in the past week https://github.com/vipulnaik/daily-updates/commit/48c976a29d966f36806dfdac069454ca1ca6fdf5
+
 ### Health research, appointments, recording
 
 - [x] ~40 minutes: Expand and improve documentation of respiratory infection https://github.com/vipulnaik/diet-exercise-health/commit/0b214dff2eb0c97e112046777a63f7b4a6f5bd9b
+- [x] ~13 minutes: Finish structured data portions of pending health recording from travel and immediate aftermath of travel
+
+### Personal devops
+
+- [x] ~4 minutes: Add remainder of Slack self-chat logs in India
+
+### Administrative / travel / bureaucracy
+
+- [x] ~4 minutes: Record various item completions and restructure the list a little bit
+
+## Other activities
+
+### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
+
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~5 minutes: Finish rewatch of a video from the neurology playlist
+- [x] ~5 minutes: Watch new content from the neurology playlist
+- [x] ~4 minutes: Watch a few linked example videos
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [x] ~20 minutes: Finish listening to a video
+- [x] ~45 minutes: Start listening to  a video
