Add summaries for period of 2025-06-13 to 2025-06-15; add week summary; fetch latest personal issues

--- a/personal-issues/1971.md
+++ b/personal-issues/1971.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2025-06-13
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,13 +10,22 @@ number:	1971
 --
 ## Personal chores
 
+### Laundry
+
+- [x] ~4 minutes: Failed attempt to start laundry
+
 ### Updates tracking and planning
 
 - [x] ~8 minutes: Add weekend summaries and week summary https://github.com/vipulnaik/daily-updates/commit/71b130e949b76c0a8ede5a4fb5553d2bbf85d157; update preamble https://github.com/vipulnaik/daily-updates/commit/b2ab607e3833fddb8db2920ff3f38cc6817216a5
+- [x] ~8 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/057febdb6436cfab6d99713374d3a70df2bc05d8
 
 ### Administrative / travel / bureaucracy
 
 - [x] ~10 minutes: Take care of a few followup items related to recent travel, including but not limited to https://github.com/vipulnaik/diet-exercise-health/commit/8a0eabdd07f548c7f2f8584f6382531641024b49
+
+### Health research, appointments, recording
+
+- [x] ~12 minutes: Document infection updates https://github.com/vipulnaik/diet-exercise-health/commit/773229cd6026d5806cb85fb5f84bc7eda76c7bd5 https://github.com/vipulnaik/diet-exercise-health/commit/1742ae94025930961505b7e7bd5d169e8996df93
 
 ## Other activities
 
@@ -24,8 +33,8 @@ number:	1971
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [ ] ~10 minutes so far: Continue watching new content from the neurology playlist
+- [x] ~15 minutes: Continue watching new content from the neurology playlist
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
-- [ ] ~40 minutes so far: Continue listening to a video
+- [x] ~1 hour: Continue listening to a video
