Pull in an update for 2025-06-15; fetch latest personal issues

--- a/personal-issues/1973.md
+++ b/personal-issues/1973.md
@@ -40,6 +40,10 @@ number:	1973
 
 - [x] ~5 minutes: Add reference queries to doc on food structure during India trip
 
+### Clothing
+
+- [x] ~5 minutes: Record foot and shoe updates
+
 ## Other activities
 
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
