--- a/personal-issues/1975.md
+++ b/personal-issues/1975.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2025-06-17
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,8 +8,52 @@ projects:
 milestone:	
 number:	1975
 --
+## Personal projects
+
+### Devops stuff
+
+- [x] ~10 minutes: Investigate bot traffic and take action to combat it; add a periodic task for this so that I can be more proactive about updating rules rather than dealing with site slowdowns
+
 ## Personal chores
+
+### Regular laundry
+
+- [x] ~23 minutes: Regular laundry including extra cleaning trip (excluding clothes sorting time that was multiplexed with listening to a video)
+
+### Administrative / travel / bureaucracy
+
+- [x] ~30 minutes: Plan for an upcoming bureaucratic task
+- [x] ~15 minutes: Put together transit checklist
+- [x] ~5 minutes: Put together a wishlist for local trips
 
 ### Health research, appointments, recording
 
 - [x] ~5 minutes: Record respiratory infection updates https://github.com/vipulnaik/diet-exercise-health/commit/459e23d1c1f887f4634ee297d04a026435cc2398
+
+### Updates tracking and planning
+
+- [x] ~8 minutes: Add summaries for remainder of past week + week summary https://github.com/vipulnaik/daily-updates/commit/e8e5252eac58d4d742c984ddb4879cb515656afd
+
+### Clothing
+
+- [x] ~4 minutes: Record a few status updates for clothes, including a fix to earlier recording
+
+## Other activities
+
+### One-off conversations
+
+- [x] ~5 minutes: Reply to an incoming message
+
+### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
+
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~5 minutes: Continue watching new content from the neurology playlist
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [x] ~45 minutes: Start listening to a video
+
+### Language learning
+
+- [x] ~30 minutes: Listen to videos on Kannada from [Kannada sikhen playlist](https://www.youtube.com/playlist?list=PLjR_rtaV4PoSw6otyVdpv9qeJh3oNgjo8) (with Hindi as the language of instruction)
