Add summaries for week of 2025-06-16 to 2025-06-22; fetch latest personal issues

--- a/personal-issues/1978.md
+++ b/personal-issues/1978.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2025-06-20
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -16,9 +16,25 @@ number:	1978
 
 ## Personal chores
 
+### Cooking and food purchases
+
+- [x] ~1 hour: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/2da448bde2d976555e6d9edcfc8b5bf0a2cb2db4
+
+### Stocks
+
+- [x] ~10 minutes: Get AAA batteries from Target (not counting separate travel time as it was multiplexed with other things)
+
+### Periodic tasks
+
+- [x] ~5 minutes: Get quarters from Citibank (not counting separate travel time as it was multiplexed with other tasks)
+
+### Administrative / travel / bureaucracy
+
+- [x] ~1 hour 30 minutes: Take care of an administrative item (including outside trip portion not covered by the rest of the outside trip and preparatory and  followup actions at home)
+
 ### Clothing (cross to health research, appointments, recording)
 
-- [x] ~10 minutes: Document findings and plan from yesterday night regarding shoe and foot
+- [x] ~30 minutes: Document findings and plan from yesterday night regarding shoe and foot
 
 ## Other activities
 
@@ -26,12 +42,12 @@ number:	1978
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [ ] ~5 minutes so far: Continue rewatching a video from the neurology playlist
+- [x] ~5 minutes: Continue rewatching a video from the neurology playlist
 
 #### First aid learning
 
-- [ ] ~5 minutes so far: Start watching a first aid video playlist
+- [x] ~5 minutes: Start watching a first aid video playlist
 
 ### Aviation accidents (air travel stuff)
 
-- [x] ~1 hour 30 minutes: Listen to a bunch of videos
+- [x] ~3 hours 10 minutes: Listen to a bunch of videos
