Add summaries for 2025-06-29; add week summary; fetch latest personal issues

--- a/personal-issues/1987.md
+++ b/personal-issues/1987.md
@@ -1,5 +1,5 @@
 title:	Vipul Sunday checklist | 2025-06-29
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,14 +8,54 @@ projects:
 milestone:	
 number:	1987
 --
+## Personal projects
+
+### Contract work for Vipul Naik
+
+- [x] ~13 minutes: Add May 2025 payments due to @riceissa https://github.com/vipulnaik/contractwork/commit/493293efac3e400e9c3205fc38be21833e6aeca3
+
+## Personal finances, income and taxes
+
+### Financial tracking and recording
+
+- [x] ~2 minutes: Update May 2025 contractwork balance to reflect payments due to @riceissa https://github.com/vipulnaik/personal-finances/commit/d8c8488583160a842a434f8d25bda6d22e62ca52
+
 ## Personal chores
+
+### Cooking and food purchases
+
+- [x] ~1 hour: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/1b1a071b9f098dc62a0be6889a5982b5adb2e9e6
+
+### Updates tracking and planning
+
+- [x] ~16 minutes: Add summaries for previous week https://github.com/vipulnaik/daily-updates/commit/a165b2040902ac146c1905de4af37775042c8acd
+- [x] ~12 minutes: Add summaries for week so far https://github.com/vipulnaik/daily-updates/commit/20f294e7ac89758a3f4c3384972fe0f43fce1a8c
 
 ### Clothing
 
-- [x] ~15 minutes: Continue shoe research from yesterday
+- [x] ~20 minutes: Continue shoe research from yesterday
 
 ## Other activities
 
+### One-off conversations
+
+- [x] ~5 minutes: Exchange a few messages and do related calculations
+- [x] ~3 minutes: Exchange a few messages and read a linked thread
+
+### Periodic conversations
+
+- [x] ~15 minutes: Weekly chat with father
+
+### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
+
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~10 minutes: Continue watching new content from the neurology playlist
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [x] ~55 minutes: Continue listening to a video
+
 ### Language learning
 
-- [ ] ~15 minutes so far: Continue listening to content from the [Kannada sikhen playlist](https://www.youtube.com/playlist?list=PLjR_rtaV4PoSw6otyVdpv9qeJh3oNgjo8)
+- [x] ~15 minutes: Continue listening to content from the [Kannada sikhen playlist](https://www.youtube.com/playlist?list=PLjR_rtaV4PoSw6otyVdpv9qeJh3oNgjo8)
